--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/leaderboard.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/leaderboard.css
@@ -90,7 +90,7 @@
         }
 
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
     .leaderboard-table .league-card-body.inner-card {
         padding-top: 1.5em;
         padding-bottom: 1.5em;
